fix(analytics/saved-filters): [PLTDA-3140] Fix the gap between the SavedFiltersActions button and the dropdown. (#5872)

--- a/src/pages/stats/common/filters/SavedFiltersActions/SavedFiltersActions.less
+++ b/src/pages/stats/common/filters/SavedFiltersActions/SavedFiltersActions.less
@@ -1,5 +1,6 @@
 :local {
     .buttonsWrapper {
+        align-items: flex-start;
         display: flex;
         justify-content: right;
         gap: 8px;
